--- a/styles/components/card.scss
+++ b/styles/components/card.scss
@@ -3,6 +3,7 @@
     border-radius: 8px;
     box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.15);
     border: 2px solid transparent;
+    display: grid;
 
     &:hover {
         box-shadow: 0 0 40px 0 rgba(245, 208, 6, 0.29);
@@ -53,19 +54,16 @@
         margin-bottom: 2px;
     }
 
-    &__icon-wrapper {
+    &__icon {
+        width: 65%;
         display: none;
+        align-self: end;
+        justify-self: right;
         padding: 0 2rem 2rem 0;
-        justify-content: end;
         
         @include mobile-break {
-            display: grid;
+            display: block;
         }
     }
-
-    &__icon {
-        width: 100%;
-    }
-
 
 }
